--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section id="about" class="header-section">
             <div class="profile-header">
-                <img src="messi.jpg" alt="รูปโปรไฟล์" class="profile-img">
+                <img src="Messi.jpg" alt="รูปโปรไฟล์" class="profile-img">
                 
                 <h1>สิรภพ ไทยถาวร</h1>
                 <p class="subtitle">สาขาวิชา: <em>ET-DIT (Information and Communication Technology)</em></p>
@@ -119,4 +119,5 @@
 
     </div>
 </body>
+
 </html>
