--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <li>
                     <i class="bi bi-envelope-fill"></i> 
                     <span>อีเมล์สถาบัน:</span> 
-                    <strong>6752100179@pim.ac.th</strong>
+                    <strong>6752100179///a////pim.ac.th</strong>
                 </li>
                 <li>
                     <i class="bi bi-telephone-fill"></i> 
@@ -121,4 +121,5 @@
 </body>
 
 </html>
+
 
